uri: require URI protocol bit to be at least 3 characters to be valid

We want to return FALSE when run on a windows-style file path.

https://bugzilla.gnome.org/show_bug.cgi?id=674296